# weil-hackathon

AgenticX/: README.md  ppt for hackathon.pptx
AgenticX/applets/dropshipping-step-agent/: Cargo.toml
AgenticX/applets/dropshipping-step-agent/src/: lib.rs
AgenticX/applets/dropshipping-step-agent/widl/: dropshipping_steps.widl
AgenticX/frontend/: index.html  package-lock.json  package.json  vite.config.ts
AgenticX/frontend/src/: AdminDashboard.tsx  App.tsx  CustomerStore.tsx  main.tsx
AgenticX/python/: agent_graph.py  ai_supplier_agent.py  api.py  audit.py  requirements.txt
