[package]
name = "dropshipping-step-agent"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]
name = "dropshipping_step_agent"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"

# Replace these with the actual versions used in the official wadk repo.
weil_rs = { path = "../../../wadk/adk/rust/weil_rs" }
weil_macros = { path = "../../../wadk/adk/rust/weil_rs/weil_macros" }

